started working on ingredients, directions, and description of first dish being made

--- a/recipes/broccolibeef.html
+++ b/recipes/broccolibeef.html
@@ -12,8 +12,39 @@
     <h1>Broccoli Beef</h1>
     <img src="odin-recipes/recipe-images/BroccoliBeef.jpg" alt="BroccoliBeef">
 
+    <p>As a person that frequents the gym, I love to eat this dish to get my protein for the day at a level that I want. 
+    I love broccoli and I love beef, so why not mix the both? This dish requires at least one hour of your time to make and a smile on your face as you smell the sweet aroma of cow meat and 
+    and hearty broccoli being cooked together in an air fryer.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Broccoli</li>
+        <li>Beef</li>
+        <li>Ginger</li>
+        <li>Garlic</li>
+        <li>Soy Sauce</li>
+        <li>Cornstrach</li>
+        <li>Scallions</li>
+        <li>Low-Sodium Beef Broth</li>
+        <li>Vegetable Oil</li>
+    </ul>
+
+    <h3>Directions</h3>
+    <p>All of these directions and ingredients were provided by delish.com. This website
+        helped me make this dish for the first and it was successful! Here is a link to their
+        website: 
+    </p>
+    <a href=https://www.delish.com/cooking/recipe-ideas/a24489879/beef-and-broccoli-recipe/ 
+    target="_blank" rel="noopener noreferrer">Original Recipe Page</a>
+    <ol>
+        <li>Use a medium bowl to combine salt, pepper, 1/3 cup soy sauce, 2 1/2 tbspns of cornstarch, and 1 tbspn of brown sugar.
+            add your cut up steak into this mixture. It will be used to add flavor to the meat.
+        </li>
+    </ol>
+    <a href="index.html">Back to home page</a>
+
 
     </body>
+
 
 
 </html>
